tests/diagnostics/unterminated_string.kal
# A string literal must be closed on the same line.
let s: str = "no closing quote;
